# codefusion

./: .gitignore  .pre-commit-config.yaml  404.html  FEATURES_IMPLEMENTED.md  README.md  demo_cf_framework.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: index.html
api/architecture-agent/: index.html
api/codebase-agent/: index.html
api/config/: index.html
api/documentation-agent/: index.html
api/interactive-session/: index.html
api/llm/: index.html
api/react-agent/: index.html
api/supervisor-agent/: index.html
api/tools/: index.html
api/web-search-agent/: index.html
cf/: README.md  __init__.py  __main__.py  config.py  exceptions.py  types.py
cf/aci/: __init__.py  code_inspector.py  computer_interface.py  environment_manager.py  repo.py  system_access.py
cf/agents/: __init__.py  base.py  code.py  docs.py  plan_then_act.py  react_architecture_agent.py  react_code_architecture_agent.py  react_codebase_agent.py  react_documentation_agent.py  react_supervisor_agent.py  reasoning_agent.py  sense_then_act.py  supervisor.py  web.py  web_search_agent.py
cf/cache/: __init__.py  semantic.py
cf/configs/: __init__.py  config.yaml  config_mgr.py
cf/core/: __init__.py  exploration_memory.py  interactive_session.py  react_agent.py  react_config.py  react_tracing.py  semantic_memory.py
cf/evals/: fastapi_eval_result.txt  fastapi_qa.yaml
cf/indexer/: __init__.py  code_indexer.py
cf/kb/: __init__.py  content_analyzer.py  knowledge_base.py  relationship_detector.py  vector_kb.py
cf/llm/: __init__.py  client.py  llm_model.py  prompt_templates.py  real_llm.py  response_parser.py  simple_llm.py  tool_registry.py
cf/run/: __init__.py  explore_batch_repo.py  explore_single_repo.py  main.py  run.py  run_cf.py  run_eval.py  setup_neo4j.py  simple_run.py
cf/tools/: __init__.py  advanced_tools.py  llm_tools.py  narrative_utils.py  registry.py  repo.py  repo_tools.py  web_search.py  web_tools.py
cf/trace/: __init__.py  tracer.py
cf/utils/: logger.py  logging_utils.py
config/default/: config.yaml
config/overview/: index.html
config/reference/: index.html
config/strategies/: index.html
dev/CODE_OF_CONDUCT/: index.html
dev/architecture/: index.html
dev/contributing/: index.html
dev/performance/: index.html
dev/testing/: index.html
dev/workflow/: index.html
docs/: index.md  react-framework.md
docs/api/: architecture-agent.md  codebase-agent.md  config.md  documentation-agent.md  index.md  interactive-session.md  llm.md  react-agent.md  supervisor-agent.md  tools.md  web-search-agent.md
docs/config/: overview.md  reference.md  strategies.md
docs/dev/: architecture.md  contributing.md  performance.md  testing.md  workflow.md
docs/installation/: dependencies.md  from-source.md  quickstart.md  setup.md
docs/reference/: api.md  cli.md  config-schema.md
docs/usage/: cli.md  configuration.md  examples.md
docs/workflows/: llm-function-calling.md
installation/dependencies/: index.html
installation/from-source/: index.html
installation/quickstart/: index.html
installation/setup/: index.html
react-framework/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/config-schema/: index.html
search/: search_index.json
tests/: __init__.py  test_config.py  test_knowledge_base.py  test_neo4j.py  test_react_framework.py
trace/: README.md
usage/cli/: index.html
usage/configuration/: index.html
usage/examples/: index.html
workflows/llm-function-calling/: index.html
